# Fact-check

./: .gitignore  README.md  app.py  main.py  pyproject.toml
Frontend2/: README.md  index.html  package-lock.json  package.json
Frontend2/src/: App.css  App.jsx  index.css  main.jsx  theme.js
Frontend2/src/components/: EventCard.jsx  Loader.jsx
Frontend2/src/store/: store.js
api/routes/: fact_check.py
backend/: README.md  app.py  index.html  main.py  pyproject.toml  requirements.txt
backend/api/routes/: fact_check.py
backend/config/: settings.py
backend/core/: fact_checker.py
backend/core/teams/: fact_check_team.py
backend/models/: schemas.py
backend/services/agents/: agent_factory.py  helper_agent.py
backend/utils/: extractors.py  proxies.py
core/: fact_checker.py
core/teams/: fact_check_team.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  App.tsx  index.css
frontend/src/components/: CustomJsonViewer.tsx  EventCard.jsx  EventCard.tsx  Loader.jsx  Sidebar.css  Sidebar.jsx
frontend/src/slice/: factCheckerSlice.js
services/agents/: agent_factory.py
